--- a/Lab4/Menegatti_Giacomo_LAB04.ipynb
+++ b/Lab4/Menegatti_Giacomo_LAB04.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,22 +528,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time of learning: 1.981126308441162\n",
+      "time of learning: 0.6252591609954834\n",
       "Training MLP of size (40,) ...\n",
       "number of parameters: 31810\n",
-      "time of learning: 1.8078501224517822\n",
+      "time of learning: 0.5698797702789307\n",
       "Training MLP of size (40, 40) ...\n",
       "number of parameters: 33450\n",
-      "time of learning: 1.9258537292480469\n",
+      "time of learning: 0.6895620822906494\n",
       "Training MLP of size (40, 40, 30) ...\n",
       "number of parameters: 34580\n",
-      "time of learning: 1.6691291332244873\n",
+      "time of learning: 0.9240448474884033\n",
       "Training MLP of size (50,) ...\n",
       "number of parameters: 39760\n",
-      "time of learning: 1.3164451122283936\n",
+      "time of learning: 0.6686978340148926\n",
       "Training MLP of size (50, 40) ...\n",
       "number of parameters: 41700\n",
-      "time of learning: 1.7045581340789795\n"
+      "time of learning: 0.7436034679412842\n"
      ]
     },
     {
@@ -689,7 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With a bigger learrning rate the NN learns faster and the score over the training set approaches zero faster. With lr = 0.2 the curve is less smooth than the others, but this doesn't appear to be a problem as there are no increases in the loss."
+    "With a bigger learning rate the NN learns faster and the score over the training set approaches zero faster. With lr = 0.2 the curve is less smooth than the others as the changes are more sudden, but this doesn't appear to be a problem as there are no increases in the loss."
    ]
   },
   {
@@ -1075,7 +1075,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time of training: 35.40075373649597\n",
+      "Time of training: 19.605053424835205\n",
+      "Training score: 1.0\n",
       "Test score: 0.7087205387205388\n"
      ]
     }
@@ -1105,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
